<resources>
    <string name="app_name">MarvelMania</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="personajes">Personajes</string>
    <string name="series">Series</string>
    <string name="comics">Cómics</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="error">Ha ocurrido un error, inténtelo más tarde</string>
    <string name="descripcion">Descripción</string>
    <string name="noHayDescripcion">No se ha encontrado ninguna descripción</string>
    <string name="num_pag">Nº Pág:</string>
    <string name="format">Formato:</string>
    <string name="variantImage">Variaciones de Portada</string>
    <string name="fecha">Fecha:</string>
    <string name="anterior">Anterior:</string>
    <string name="siguiente">Próximo:</string>
    <string name="email">Correo electrónico</string>
    <string name="emailExample" >ejemplo@gmail.com</string>
    <string name="pass">Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrar"><u>¿No tienes cuenta? Regístrate</u></string>
    <string name="cambiarpass">Cambiar contraseña</string>
    <string name="antiguapass">Antigua contraseña</string>
    <string name="nuevapass">Nueva contraseña</string>
    <string name="repetirpass">Repetir contraseña</string>
    <string name="actualizar">Actualizar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="camposRellenos">Ningún campo puede estar vacío</string>
    <string name="user_register">Usuario registrado…</string>
    <string name="bienvenido">Bienvenido de nuevo</string>
    <string name="requerido">es requerido</string>
    <string name="passNoCoincide">Las contraseñas no coinciden</string>
    <string name="error_autentificar">Usuario o contraseña incorrectos</string>
    <string name="email_enviado">Email enviando a </string>
    <string name="charact_name">Nombre Personaje</string>
    <string name="buscar">Buscar</string>
    <string name="titulo">Título</string>
    <string name="sinUsuario">Anónimo</string>
    <string name="logout">Cerrar sesión</string>
    <string name="datosUsuario">Información de Usuario</string>
    <string name="oldpassNocoincide">La antigua contraseña no es correcta</string>
    <string name="cambioPassCorrecto">Contraseña actualizada</string>
    <string name="cambioPassError">Error al actualizar la contraseña</string>
    <string name="addFav">Añadir Favorito</string>
    <string name="delFav">Borrar Favorito</string>
    <string name="necesitasLogin">Necesitas estar conectado para realizar esta acción</string>
    <string name="loginLibrary">Inicia sesión para ver tu biblioteca</string>
    <string name="fav" translatable="false">favorito</string>
    <string name="nofav" translatable="false">noFavorito</string>
    <string name="delUser">Borrar usuario</string>
    <string name="asegurarBorradoUser">¿Seguro que quieres eliminar tu cuenta?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="removingFav">Eliminando de favoritos</string>
    <string name="addingFav">Añadiendo a favoritos</string>
    <string name="cantRemFav">No se encuentra en favoritos</string>
    <string name="cantAddFav">Ya se encuentra en favoritos</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentar">Comentar</string>
    <string name="votado" translatable="false">votado</string>
    <string name="novotado" translatable="false">novotado</string>
    <string name="informacionNoEncontrada">No se ha encontrado información</string>
    <string name="titleAlertExit">Confirmación</string>
    <string name="msgAlertExit">¿Seguro que quieres salir?</string>
    <string name="offline" translatable="false">offline</string>
    <string name="online" translatable="false">online</string>
    <string name="defaultImage" translatable="false">default.png</string>
    <string name="forgotPass"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="cancel">Cancelar</string>
    <string name="campoNoVacio">Email no puede estar vacío</string>
    <string name="asegurarBorradoComent">¿Estas seguro?</string>
    <string name="comentarioBorradomsg">Comentario eliminado por el autor</string>
    <string name="comentarioBorrado">Comentario eliminado</string>
    <string name="editComent">Editar comentario</string>
    <string name="comentEdited">" (editado)"</string>
    <string name="editBtn">Editar</string>
    <string name="noInternetConexion">No hay conexion a internet</string>
</resources>