<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/container_userdata">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view"
                app:srcCompat="@mipmap/icon"
                android:layout_height="120dp"
                android:layout_width="120dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                tools:ignore="ExtraText" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_edit"
                android:layout_marginTop="110dp"
                android:layout_alignEnd="@id/image_view"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="#424242"
                android:textSize="18sp" />
            <View
                android:id="@+id/separador1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:layout_below="@id/email"/>

            <TextView
                android:id="@+id/emailtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separador1"
                android:background="@color/white"
                android:layout_marginTop="6dp"
                android:padding="5dp"
                android:textSize="20sp"
                android:textIsSelectable="false"/>
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailtext"
                android:text="@string/username"
                android:textColor="#424242"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>
            <View
                android:id="@+id/separador2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/user_name"
                android:layout_marginTop="5dp"
                android:background="@color/black" />
            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separador2"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:textSize="20sp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:layout_marginTop="20dp"
                android:text="@string/cambiarpass"
                android:textColor="#424242"
                android:textSize="18sp" />

            <View
                android:id="@+id/separador3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/password"
                android:layout_marginTop="5dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/passtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separador3"
                android:ems="10"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/antiguapass"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/passtextnueva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passtext"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/nuevapass"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:background="@color/white"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/passtextrepetirnueva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passtextnueva"
                android:ems="10"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/repetirpass"
                android:background="@color/white"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/botonActualizarPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/passtextrepetirnueva"
                android:layout_marginTop="20dp"
                android:text="@string/actualizar" />
            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/botonActualizarPass"
                android:layout_marginTop="20dp"
                android:text="@string/logout"/>
            <Button
                android:id="@+id/deleteUser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/logout"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/error"
                android:text="@string/delUser"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>