<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register"
    android:background="@color/fragmentBackgroundlight">
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            android:layout_marginTop="50dp"
            tools:ignore="DuplicateSpeakableTextCheck"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/emailExample"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            android:layout_marginTop="20dp"
            tools:ignore="DuplicateSpeakableTextCheck"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            android:layout_marginTop="20dp"
            tools:ignore="DuplicateSpeakableTextCheck"/>
        <EditText
            android:id="@+id/repeatpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/repetirpass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            android:layout_marginTop="20dp"
            tools:ignore="DuplicateSpeakableTextCheck"/>
        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_below="@id/repeatpassword"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email"/>


</RelativeLayout>