<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackgroundlight"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio_sesion"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_below="@id/titulo"/>

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/pass"
        android:textSize="20sp"

        android:layout_below="@id/ETemail"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/ETPpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textColor="#D7CCC8" />


</RelativeLayout>