<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fragmentBackgroundDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:id="@id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageIV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1.5"
                    android:paddingEnd="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tituloTV"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/numpag"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6dp"
                                    android:text="@string/num_pag"
                                    android:textColor="@color/white"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/numpagText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    android:layout_marginTop="6dp"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/format"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/format"
                                    android:textColor="@color/white"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/formatText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/iconFav"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="10dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/ic_fav_noadded" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container"
                android:text="@string/descripcion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="7dp"/>
            <TextView
                android:id="@+id/descripcionText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_below="@id/descripcion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@id/descripcionText">
                <TextView
                android:id="@+id/portadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/variantImage"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingTop="7dp"
                tools:ignore="NotSibling" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewListVariantImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>
                <TextView
                    android:id="@+id/characters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personajes"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingTop="7dp"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewListCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>