<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.showInfo.InfoCompleteCharacts"
    android:background="@color/fragmentBackgroundDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:id="@+id/contenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:srcCompat="@tools:sample/avatars"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="6dp">
                <TextView
                    android:id="@+id/nombreTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="16dp"

                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/iconFav"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_fav_noadded"
                    android:layout_marginTop="7dp"
                    android:layout_gravity="end"/>
            </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contenedor"
                android:text="@string/descripcion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="7dp"/>
            <TextView
                android:id="@+id/descripcionText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_below="@id/descripcion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@id/descripcionText">
                <TextView
                    android:id="@+id/comics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comics"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingTop="7dp"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewListComics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>

                <TextView
                    android:id="@+id/series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingTop="7dp"
                    tools:ignore="NotSibling" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewListSeries"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>